--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
+<!DOCTYPE html>
 <html>
-  <head>
-  </head>
-    <body>
-      <p>meow meow meow</p>
-    </body>
+<body>
+
+<p>Click the button to display an meow meow meow alert box:</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+    alert("I am an alert box!");
+}
+</script>
+
+</body>
 </html>
