--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<link href="css/stles.css" rel="stylesheet" type="text/css" />
+<link href="css/styles.css" rel="stylesheet" type="text/css" />
 
 <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,200' rel='stylesheet' type='text/css'>
 
