--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
+<link href="css/sytles.css" rel="stylesheet" type="text/css" />
 
 <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,200' rel='stylesheet' type='text/css'>
 
@@ -192,7 +192,9 @@ function checkTime(i) {
             
             <td>
             	<div class="drop_down">
+                	<button onclick=""myFunction() class="dropbtn" type="submit">
                 	<img src="https://github.com/duan14/image-library/blob/image-upload/A4A71FB5-9FE7-4AB1-9AC3-E61033DEEE11@3x.png?raw=true" alt="drop down">
+                	</button>
                 </div>
             </td>
             
