--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ function checkTime(i) {
                 <tr>
                 	<td>
                     <div class="calendar_detail blue_udline">
-                    	<span id="p1"><a class="blue_udline" href="http://www.kaiyaoduan.com">1 Follow Up</a></span>
+                    	<span id="p1"><a class="blue_udline" href="http://www.kaiyaoduan.com" target="_blank">1 Follow Up</a></span>
                     </div>
                     </td>
                 </tr>
@@ -282,7 +282,7 @@ function checkTime(i) {
                 <tr>
                 	<td>
                     <div class="note_detail blue_udline">
-                    	<span id="p2"><a class="blue_udline" href="https://www.google.com">3 Notes</a></span>
+                    	<span id="p2"><a class="blue_udline" href="http://www.kaiyaoduan.com" target="_blank">3 Notes</a></span>
                     </div>
                     </td>
                 </div>
