--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Popup</title>
 
+
+
+
+
 <link href="css/styles.css" rel="stylesheet" type="text/css" />
 <link href="css/hover-min.css" rel="stylesheet">
 
 <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,200' rel='stylesheet' type='text/css'>
+
 
 <script>
 function startTime() {
@@ -27,8 +32,9 @@ function checkTime(i) {
 }
 </script>
 
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <link href="http://codegena.com/assets/css/image-preview-for-link.css" rel="stylesheet">     
+ <link href="http://codegena.com/assets/css/image-preview-for-link.css" rel="stylesheet">
   <script type="text/javascript">
     $(function() {
                 $('#p1 a').miniPreview({ prefetch: 'pageload' });
@@ -37,6 +43,9 @@ function checkTime(i) {
             });
   </script> <script src="http://codegena.com/assets/js/image-preview-for-link.js"></script>
   
+  
+
+
 </head>
 
 <body onload="startTime()">
@@ -190,7 +199,7 @@ function checkTime(i) {
         
         	<td>
             	<div class="call_history">
-                	<span>CALLS HISTORY</span>
+                	<span id="p1"><a class="history" href="http://www.kaiyaoduan.com" target="_blank">CALLS HISTORY</a></span>
                 </div>
             </td>
             
@@ -250,7 +259,7 @@ function checkTime(i) {
                 <tr>
                 	<td>
                     <div class="calendar_detail blue_udline">
-                    	<span id="p1"><a class="blue_udline" href="http://www.kaiyaoduan.com" target="_blank">1 Follow Up</a></span>
+                    	<span>1 Follow Up</span>
                     </div>
                     </td>
                 </tr>
@@ -273,7 +282,7 @@ function checkTime(i) {
                 <tr>
                 	<td>
                     <div class="note_detail blue_udline">
-                    	<span id="p2"><a class="blue_udline" href="http://www.kaiyaoduan.com" target="_blank">3 Notes</a></span>
+                    	<span>3 Notes</span>
                     </div>
                     </td>
                 </div>
