--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@ function checkTime(i) {
                         
                         <tr>
                         	<div>
-                            	<span class="social"><span class="social_udline">Linkedin</span>, <span class="social_udline">Facebook</span>, <span class="social_udline">Twitter</span>  <span class="social_udline">+ Add Field</span></span>
+                            	<span class="social">
+                                	<span class="social_udline" id="p2"><a class="social social_udline" href="http://www.kaiyaoduan.com" target="_blank">Linkedin</a></span>, 
+                                    <span class="social_udline" id="p3"><a class="social social_udline" href="http://www.kaiyaoduan.com" target="_blank">Facebook</a></span>, 
+                                    <span class="social_udline" id="p3"><a class="social social_udline" href="http://www.kaiyaoduan.com" target="_blank">Twitter</a></span>  <span class="social_udline">+ Add Field</span></span>
                             </div>
                         </tr>
                         
